Few changes and update python to 3.9

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ author_email = alberto.bailoni@embl.de
 
 [options]
 packages = find:
-python_requires = >=3.7
+python_requires = ~=3.9
 install_requires =
     scipy
     h5py
@@ -48,7 +48,7 @@ install_requires =
     pyqt5.sip
     napari-ome-zarr
     speedrun @ git+https://github.com/abailoni/speedrun@master#egg=speedrun
-    paquo @ git+https://github.com/abailoni/paquo@main#egg=paquo
+    paquo @ git+https://github.com/abailoni/paquo@add_delete_image#egg=paquo
 ;   Why???
     scikit-learn
 ;
